002: Add JWT token generation. Fix spelling

--- a/AtFileshare.API/appsettings.Development.json
+++ b/AtFileshare.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "JwtSetting": {
+    "SecretKey": "",
+    "ExpiryMinutes": 120,
+    "Issuer": "AtFileshare (dev)"
   }
 }
