--- a/AtFileshare.API/appsettings.json
+++ b/AtFileshare.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSetting": {
+    "SecretKey": "",
+    "ExpiryMinutes": 120,
+    "Issuer": "AtFileshare"
+  }
 }
