--- a/AtFileshare.API/AtFileshare.API.csproj
+++ b/AtFileshare.API/AtFileshare.API.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Configurations>Debug;Release;Development</Configurations>
+    <UserSecretsId>57ff621b-40cb-4ac6-88f9-0fefcb22b490</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
