--- a/AtFileshare.Application/AtFileshare.Application.csproj
+++ b/AtFileshare.Application/AtFileshare.Application.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AtFileshare.Domain\AtFileshare.Domain.csproj" />
   </ItemGroup>
 
@@ -8,6 +12,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;Development</Configurations>
   </PropertyGroup>
 
 </Project>
