--- a/AtFileshare.Infrastructure/AtFileshare.Infrastructure.csproj
+++ b/AtFileshare.Infrastructure/AtFileshare.Infrastructure.csproj
@@ -1,6 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AtFileshare.Application\AtFileshare.Application.csproj" />
   </ItemGroup>
 
@@ -8,6 +14,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;Development</Configurations>
   </PropertyGroup>
 
 </Project>
