--- a/AtFileshare.API/appsettings.json
+++ b/AtFileshare.API/appsettings.json
@@ -6,9 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtSetting": {
-    "SecretKey": "",
-    "ExpiryMinutes": 120,
-    "Issuer": "AtFileshare"
-  }
+    "JwtSetting": {
+        "SecretKey": "",
+        "ExpiryMinutes": 120,
+        "Issuer": "AtFileshare"
+    },
+    "FileSystem": {
+        "Directory": "AppStorage"
+    }
 }
